<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.jpype</groupId>
    <artifactId>org.jpype</artifactId>
    <version>1.7.2.dev0</version>
    <packaging>jar</packaging>
    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.3.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>5.17.0</version>
            <type>jar</type>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>9</maven.compiler.release>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <executions>
                    <execution>
                        <id>compile-single-class</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <!-- Specify the source file to compile -->
                            <includes>
                                <include>exclude/org/jpype/internal/Reflector0.java</include>
                            </includes>
                            <!-- Output directory for compiled class -->
                            <outputDirectory>${project.build.directory}/classes/META-INF/versions/0</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <showSuccess>true</showSuccess>
                    <trimStackTrace>true</trimStackTrace>
                    <properties>
                        <property>
                            <name>verbose</name>
                            <value>2</value>
                        </property>
                    </properties>
                    <systemPropertyVariables>
                        <java.util.logging.config.file>${project.basedir}/logging.properties</java.util.logging.config.file>
                        <jpype.path>../..</jpype.path>
                        <jpype.nocache>false</jpype.nocache>
                        <python.executable>python3.12</python.executable>
                        <python.config.home>/usr</python.config.home>
                    </systemPropertyVariables>
                    <argLine>
                        --enable-native-access=ALL-UNNAMED
                        --enable-native-access=org.jpype
                        --module-path=${project.build.directory}/${project.build.finalName}.jar
                        --add-modules=org.jpype
                    </argLine>
                </configuration>
            </plugin>

        </plugins>
    </build>
    <name>jpype_module</name>
</project>
